# scraper_limits

./: README.md  pyproject.toml  run.sh
infrastructure/: docker-compose.yaml
scraper_limits/: __main__.py  seed.py  server.py
scraper_limits/engine/: models.py  worker.py
scraper_limits/io/: __init__.py  models.py  rmq.py
tests/: test_scraper_limits.py
