[tool.poetry]
name = "scraper_limits"
version = "0.1.0"
description = ""
authors = ["Erikas Bulba <hello@ebulba.lt>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
aio-pika = "^8.2.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"
pylint = "^2.15.2"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pylint]
max-line-length = 120
disable = ["missing-module-docstring", 
            "missing-class-docstring", 
            "missing-function-docstring"]
